--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -25,11 +25,24 @@ h6 {
   text-transform: uppercase;
 }
 
+
 p {
   font-size: 16px;
   line-height: 1.5;
   margin: 0 0 10px;
 }
+
+ul {
+    list-style-type: square;
+    list-style-position: inside;
+    margin: 0;
+    padding: 0;
+}
+
+.iclc-justify {
+  text-align: justify;
+}
+
 
 @media (min-width: 768px) {
   p {
