--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -43,6 +43,13 @@ ul {
   text-align: justify;
 }
 
+.iclc-black {
+  color: black;
+}
+
+.iclc-black a {
+  color: #1d9b6c;
+}
 
 @media (min-width: 768px) {
   p {
@@ -247,9 +254,20 @@ a:focus, a:hover {
   background-size: cover;
 }
 
+.where-section {
+  color: white;
+  background: url("../img/medialab-dark.jpg") no-repeat center center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
 .codigo-section {
   color: white;
-  background: url("../img/downloads-bg.jpg") no-repeat center center scroll;
+  background: url("../img/lacosa-dark.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
